Bug 697186: Workaround JPEG lib bug.

Commit fix for overflow. Awaiting response from IJG.